--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -33,6 +33,12 @@
             <th>contents</th>
             <td th:text="${board.boardContents}"></td>
         </tr>
+        <tr th:if="${board.fileAttached == 1}">
+            <th>image</th>
+            <td>
+                <img th:src="@{|/upload/${board.storedFileName}}" width="200" height="200" alt="">
+            </td>
+        </tr>
     </table>
     <div class="container">
         <button class="btn btn-primary" onclick="list_req()">목록</button>
