--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -35,8 +35,8 @@
         </tr>
         <tr th:if="${board.fileAttached == 1}">
             <th>image</th>
-            <td>
-                <img th:src="@{|/upload/${board.storedFileName}}" width="200" height="200" alt="">
+            <td th:each="fileName: ${board.storedFileName}">
+                <img th:src="@{|/upload/${fileName}}" width="200" height="200" alt="">
             </td>
         </tr>
     </table>
