06_댓글_작성 완료

--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
             <th>date</th>
-            <td th:text="${board.createdAt}"></td>
+            <td th:text="*{#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
         </tr>
         <tr>
             <th>hits</th>
@@ -49,11 +49,40 @@
 
     </div>
 
+    <div class="container" id="comment-write">
+        <input type="text" id="comment-writer" placeholder="작성자">
+        <input type="text" id="comment-contents" placeholder="내용">
+        <button onclick="comment_write()">댓글작성</button>
+    </div>
+    <div class="container" id="comment-list">
+
+    </div>
+
 </div>
 
 <div th:replace="component/footer :: footer"></div>
 </body>
 <script th:inline="javascript">
+    const comment_write = () => {
+        const writer = document.querySelector("#comment-writer").value;
+        const contents = document.querySelector("#comment-contents").value;
+        const boardId = [[${board.id}]];
+        axios({
+            method: "post",
+            url: "/comment/save",
+            data: {
+                commentWriter: writer,
+                commentContents: contents,
+                boardId: boardId
+            }
+        }).then(res => {
+            console.log("res", res);
+
+        }).catch(err => {
+            console.log("err", err);
+        });
+    }
+
     const list_req = () => {
         location.href = "/board/";
     }
