--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,20 +4,27 @@
 }
 
 #header {
-    background-color: #3157d2;
+    background-color: #00A170;
     text-align: center;
     color: white;
     padding: 20px;
+    font-weight: bold;
+    font-family: 'Prompt', sans-serif;
 }
 
 #nav {
     display: flex;
     padding: 10px 100px;
-    background-color: #8c89e7;
+    background-color: #363945;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 #nav .menu {
     padding: 10px;
+    color: white;
 }
 
 #nav .menu a {
@@ -30,8 +37,9 @@
 }
 
 #section {
-    background-color: #e4e4e4;
+    background-color: white;
     padding: 20px;
+    height: 300px;
 }
 
 #section h2 {
@@ -43,9 +51,16 @@
 }
 
 #footer {
-    background-color: #3157d2;
-    text-align: center;
-    padding: 20px;
+    background-color: #9F9C99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    font-family: 'Prompt', sans-serif;
+}
+
+#footer h6 {
+    margin: 0;
 }
 
 
