--- a/src/main/resources/templates/boardPages/boardList.html
+++ b/src/main/resources/templates/boardPages/boardList.html
@@ -20,11 +20,13 @@
                 <td th:text="${board.id}"></td>
                 <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
                 <td th:text="${board.boardWriter}"></td>
-                <td th:text="${board.createdAt}"></td>
+                <td th:text="*{#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
                 <td th:text="${board.boardHits}"></td>
             </tr>
         </table>
     </div>
 </div>
+<div th:replace="component/footer :: footer"></div>
+
 </body>
 </html>
