06_댓글_작성 후 목록 출력

--- a/src/main/resources/templates/boardPages/boardList.html
+++ b/src/main/resources/templates/boardPages/boardList.html
@@ -20,7 +20,7 @@
                 <td th:text="${board.id}"></td>
                 <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
                 <td th:text="${board.boardWriter}"></td>
-                <td th:text="*{#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                <td th:text="${board.createdAt}"></td>
                 <td th:text="${board.boardHits}"></td>
             </tr>
         </table>
