--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -39,7 +39,7 @@
 #section {
     background-color: white;
     padding: 20px;
-    height: 300px;
+    /*height: 300px;*/
 }
 
 #section h2 {
@@ -55,7 +55,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    /*height: 50px;*/
     font-family: 'Prompt', sans-serif;
 }
 
