--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
             <th>date</th>
-            <td th:text="*{#temporals.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td th:text="${board.createdAt}"></td>
         </tr>
         <tr>
             <th>hits</th>
@@ -55,7 +55,20 @@
         <button onclick="comment_write()">댓글작성</button>
     </div>
     <div class="container" id="comment-list">
-
+        <table class="table">
+            <tr>
+                <th>id</th>
+                <th>writer</th>
+                <th>contents</th>
+                <th>date</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </div>
 
 </div>
@@ -63,6 +76,28 @@
 <div th:replace="component/footer :: footer"></div>
 </body>
 <script th:inline="javascript">
+    const comment_list = (commentList) => {
+        console.log("댓글 목록 함수", commentList);
+        const resultArea = document.querySelector("#comment-list");
+        let output = "        <table class=\"table\">\n" +
+                    "            <tr>\n" +
+                    "                <th>id</th>\n" +
+                    "                <th>writer</th>\n" +
+                    "                <th>contents</th>\n" +
+                    "                <th>date</th>\n" +
+                    "            </tr>";
+        for(let i in commentList) {
+            output += "<tr>\n" +
+                "                <td>" + commentList[i].id + "</td>\n" +
+                "                <td>" + commentList[i].commentWriter + "</td>\n" +
+                "                <td>" + commentList[i].commentContents + "</td>\n" +
+                "                <td>" + commentList[i].createdAt + "</td>\n" +
+                "            </tr>";
+        }
+        output += "</table>";
+        resultArea.innerHTML = output;
+    }
+
     const comment_write = () => {
         const writer = document.querySelector("#comment-writer").value;
         const contents = document.querySelector("#comment-contents").value;
@@ -77,7 +112,10 @@
             }
         }).then(res => {
             console.log("res", res);
-
+            console.log("댓글 목록", res.data);
+            document.querySelector("#comment-writer").value = "";
+            document.querySelector("#comment-contents").value = "";
+            comment_list(res.data);
         }).catch(err => {
             console.log("err", err);
         });
