--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -55,20 +55,25 @@
         <button onclick="comment_write()">댓글작성</button>
     </div>
     <div class="container" id="comment-list">
-        <table class="table">
-            <tr>
-                <th>id</th>
-                <th>writer</th>
-                <th>contents</th>
-                <th>date</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
+        <div th:if="${commentList == null}">
+            <p>작성된 댓글이 없습니다.</p>
+        </div>
+        <div th:unless="${commentList == null}">
+            <table class="table">
+                <tr>
+                    <th>id</th>
+                    <th>writer</th>
+                    <th>contents</th>
+                    <th>date</th>
+                </tr>
+                <tr th:each="comment: ${commentList}">
+                    <td th:text="${comment.id}"></td>
+                    <td th:text="${comment.commentWriter}"></td>
+                    <td th:text="${comment.commentContents}"></td>
+                    <td th:text="${comment.createdAt}"></td>
+                </tr>
+            </table>
+        </div>
     </div>
 
 </div>
@@ -80,13 +85,13 @@
         console.log("댓글 목록 함수", commentList);
         const resultArea = document.querySelector("#comment-list");
         let output = "        <table class=\"table\">\n" +
-                    "            <tr>\n" +
-                    "                <th>id</th>\n" +
-                    "                <th>writer</th>\n" +
-                    "                <th>contents</th>\n" +
-                    "                <th>date</th>\n" +
-                    "            </tr>";
-        for(let i in commentList) {
+            "            <tr>\n" +
+            "                <th>id</th>\n" +
+            "                <th>writer</th>\n" +
+            "                <th>contents</th>\n" +
+            "                <th>date</th>\n" +
+            "            </tr>";
+        for (let i in commentList) {
             output += "<tr>\n" +
                 "                <td>" + commentList[i].id + "</td>\n" +
                 "                <td>" + commentList[i].commentWriter + "</td>\n" +
@@ -143,7 +148,7 @@
                 // location.href = "/board/delete/"+id;
                 axios({
                     method: "delete",
-                    url: "/board/"+id
+                    url: "/board/" + id
                 }).then(res => {
                     location.href = "/board/";
                 }).catch(err => {
@@ -165,7 +170,6 @@
             alert("비밀번호 불일치!!");
         }
     }
-
 
 
 </script>
