--- a/src/main/resources/templates/boardPages/boardDetail.html
+++ b/src/main/resources/templates/boardPages/boardDetail.html
@@ -127,7 +127,9 @@
     }
 
     const list_req = () => {
-        location.href = "/board/";
+        // location.href = "/board/";
+        const page = [[${page}]];
+        location.href = "/board?page=" + page;
     }
 
     const req = (type) => {
